<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_prosumer_home" android:icon="@drawable/sg_ic_home" android:title="@string/prosumer_home" />
        <item android:id="@+id/nav_operator_home" android:icon="@drawable/sg_ic_grid" android:title="@string/operator_home" />
        <item android:id="@+id/nav_profile" android:icon="@drawable/sg_ic_user" android:title="@string/profile" />
        <item android:id="@+id/nav_nearby_stations" android:icon="@drawable/sg_ic_pin" android:title="@string/nearby_stations" />
        <item android:id="@+id/nav_my_reservations" android:icon="@drawable/sg_ic_calendar" android:title="@string/my_reservations" />
        <item android:id="@+id/nav_booking_history" android:icon="@drawable/sg_ic_history" android:title="@string/booking_history" />
        <item android:id="@+id/nav_qr_operations" android:icon="@drawable/sg_ic_qr" android:title="@string/qr_operations" />
    </group>
    <item android:title="@string/account_menu">
        <menu>
            <item android:id="@+id/nav_sign_out" android:icon="@drawable/sg_ic_logout" android:title="@string/sign_out" />
        </menu>
    </item>
</menu>
