<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/nav_prosumer_home">

    <fragment android:id="@+id/nav_prosumer_home" android:name="com.solargrid.exchange.ui.home.ProsumerHomeFragment" android:label="@string/prosumer_home" />
    <fragment android:id="@+id/nav_operator_home" android:name="com.solargrid.exchange.ui.home.OperatorHomeFragment" android:label="@string/operator_home" />
    <fragment android:id="@+id/nav_profile" android:name="com.solargrid.exchange.ui.profile.ProfileFragment" android:label="@string/profile" />
    <fragment android:id="@+id/nav_nearby_stations" android:name="com.solargrid.exchange.ui.stations.NearbyStationsFragment" android:label="@string/nearby_stations" />
    <fragment android:id="@+id/nav_station_detail" android:name="com.solargrid.exchange.ui.stations.StationDetailFragment" android:label="@string/station_details">
        <argument android:name="stationId" app:argType="string" />
    </fragment>
    <fragment android:id="@+id/nav_available_slots" android:name="com.solargrid.exchange.ui.stations.AvailableSlotsFragment" android:label="@string/available_slots_live">
        <argument android:name="stationId" app:argType="string" />
    </fragment>
    <fragment android:id="@+id/nav_my_reservations" android:name="com.solargrid.exchange.ui.reservations.ReservationListFragment" android:label="@string/my_reservations">
        <argument android:name="defaultView" android:defaultValue="Pending" app:argType="string" />
    </fragment>
    <fragment android:id="@+id/nav_booking_history" android:name="com.solargrid.exchange.ui.dashboard.BookingHistoryFragment" android:label="@string/booking_history" />
    <fragment android:id="@+id/nav_reservation_detail" android:name="com.solargrid.exchange.ui.reservations.ReservationDetailFragment" android:label="@string/reservation_details">
        <argument android:name="reservationId" app:argType="string" />
    </fragment>
    <fragment android:id="@+id/nav_reservation_qr" android:name="com.solargrid.exchange.ui.transactions.ReservationQrFragment" android:label="@string/reservation_qr_title">
        <argument android:name="reservationId" app:argType="string" />
    </fragment>
    <fragment android:id="@+id/nav_reservation_form" android:name="com.solargrid.exchange.ui.reservations.ReservationFormFragment" android:label="@string/reservation" />
    <fragment android:id="@+id/nav_booking_review" android:name="com.solargrid.exchange.ui.reservations.BookingReviewFragment" android:label="@string/review_booking_title" />
    <fragment android:id="@+id/nav_create_reservation_summary" android:name="com.solargrid.exchange.ui.reservations.CreateReservationSummaryFragment" android:label="@string/reservation_created" />
    <fragment android:id="@+id/nav_reservation_summary" android:name="com.solargrid.exchange.ui.reservations.ReservationSummaryFragment" android:label="@string/reservation_summary" />
    <fragment android:id="@+id/nav_qr_operations" android:name="com.solargrid.exchange.ui.operations.OperatorScannerFragment" android:label="@string/qr_operations" />
    <fragment android:id="@+id/nav_transaction_verification" android:name="com.solargrid.exchange.ui.operations.TransactionVerificationFragment" android:label="@string/verification_screen_title" />
    <fragment android:id="@+id/nav_transaction_completion" android:name="com.solargrid.exchange.ui.operations.TransactionCompletionFragment" android:label="@string/completion_screen_title" />
</navigation>
