<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/solar_surface">

    <LinearLayout
        android:id="@+id/transaction_completion_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/space_xl"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/transfer_completed_title"
            android:textAppearance="@style/TextAppearance.SolarGrid.Headline" />

        <TextView
            android:id="@+id/transaction_completion_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.SolarGrid.Body"
            android:textIsSelectable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:gravity="center"
            android:text="@string/completion_server_notice"
            android:textAppearance="@style/TextAppearance.SolarGrid.Body" />

        <Button
            android:id="@+id/transaction_scan_another"
            style="@style/Widget.SolarGrid.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:text="@string/scan_another_qr" />

        <Button
            android:id="@+id/transaction_operator_home"
            style="@style/Widget.SolarGrid.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:text="@string/return_operator_home" />
    </LinearLayout>

    <com.solargrid.exchange.ui.common.UiStateView
        android:id="@+id/transaction_completion_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</FrameLayout>
